--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                         <div class="content">
                             <ul class="list-unstyled">
                                 <li><i class="fa fa-map-marker"></i><span class="sr-only">Location:</span>BITS Pilani Goa Campus, NH 17B, South Goa- 403726, India</li>
-                                <li><i class="fa fa-envelope-o"></i><span class="sr-only">Email:</span><a href="#">adarsh0112@gmail.com</a></li>
+                                <li><i class="fa fa-envelope-o"></i><span class="sr-only">Email:</span><a href="mailto:adarsh0112@gmail.com">adarsh0112@gmail.com</a></li>
                                 
                             </ul>
                         </div><!--//content-->  
