--- a/404.html
+++ b/404.html
@@ -10,5 +10,5 @@ title: Oops, we're lost!
 </header>
 <div class="page">
   <h1 class="page-title">{{ page.title }}</h1>
-  <span>"Diagon Alley", not "Diagonally"!.</span>
+  <span>"Diagon Alley", not "Diagonally"!</span>
 </div>
